--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,20 +3,14 @@
   "extends": [
     "eslint:recommended",
     "plugin:prettier/recommended",
-    "plugin:jest/all",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
-  "plugins": [
-    "prettier",
-    "jest",
-    "@typescript-eslint"
-  ],
+  "plugins": ["prettier", "@typescript-eslint"],
   "env": {
     "browser": true,
     "es6": true,
-    "node": true,
-    "jest/globals": true
+    "node": true
   },
   "globals": {},
   "rules": {
@@ -26,45 +20,19 @@
         "max": 10
       }
     ],
-    "curly": [
-      "warn",
-      "all"
-    ],
-    "max-depth": [
-      "warn",
-      2
-    ],
-    "max-lines": [
-      "warn",
-      120
-    ],
-    "max-lines-per-function": [
-      "warn",
-      24
-    ],
-    "max-statements": [
-      "warn",
-      12
-    ],
-    "max-nested-callbacks": [
-      "warn",
-      2
-    ],
-    "max-params": [
-      "warn",
-      4
-    ],
+    "curly": ["warn", "all"],
+    "max-depth": ["warn", 3],
+    "max-lines": ["warn", 120],
+    "max-lines-per-function": ["warn", 100],
+    "max-statements": ["warn", 20],
+    "max-nested-callbacks": ["warn", 3],
+    "max-params": ["warn", 2],
     "no-magic-numbers": [
-      "warn",
+      "off",
       {
         "detectObjects": false,
         "enforceConst": true,
-        "ignore": [
-          -1,
-          0,
-          1,
-          2
-        ],
+        "ignore": [-1, 0, 1, 2],
         "ignoreArrayIndexes": true
       }
     ],
@@ -84,14 +52,7 @@
       }
     ],
     "@typescript-eslint/no-unused-vars": "warn",
-    "jest/no-hooks": "on",
-    "jest/prefer-expect-assertions": "off",
-    "jest/no-disabled-tests": "warn",
-    "jest/no-focused-tests": "warn",
-    "jest/lowercase-name": "off",
-    "jest/no-identical-title": "warn",
-    "jest/prefer-to-have-length": "warn",
-    "jest/valid-expect": "warn"
+    "@typescript-eslint/no-empty-function": "warn"
   },
   "parserOptions": {
     "ecmaVersion": 2021,
