--- a/package.json
+++ b/package.json
@@ -19,31 +19,24 @@
   "scripts": {
     "start": "cypress open",
     "test": "cypress run",
-    "build": "tsc -p tsconfig.json",
-    "dev": "ts-node ./src/main.ts",
-    "ts-node": "ts-node",
     "format": "prettier --write \"./**/*.{ts,json}\"",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint cypress/integration --ext .ts",
     "lint:fix": "npm run lint -- --fix",
     "prerelease": "standard-version ",
     "release": "git push --follow-tags origin main",
     "update": "ncu -u"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "cypress": "^9.5.2",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^26.1.3",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.5.1",
     "npm-check-updates": "^12.5.4",
     "prettier": "^2.6.1",
     "standard-version": "^9.3.2",
-    "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0"
   },
   "dependencies": {
