--- a/package.json
+++ b/package.json
@@ -20,26 +20,26 @@
     "start": "cypress open",
     "test": "cypress run",
     "format": "prettier --write \"./**/*.{ts,json}\"",
-    "lint": "eslint cypress/integration --ext .ts",
+    "lint": "eslint cypress --ext .ts",
     "lint:fix": "npm run lint -- --fix",
     "prerelease": "standard-version ",
     "release": "git push --follow-tags origin main",
     "update": "ncu -u"
   },
+  "dependencies": {
+    "cypress": "^9.5.2",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
+  },
   "devDependencies": {
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
-    "cypress": "^9.5.2",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "npm-check-updates": "^12.5.4",
     "prettier": "^2.6.1",
-    "standard-version": "^9.3.2",
-    "ts-node": "^10.7.0"
-  },
-  "dependencies": {
-    "typescript": "^4.6.3"
+    "standard-version": "^9.3.2"
   }
 }
