--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,10 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
-  "plugins": ["prettier", "@typescript-eslint"],
+  "plugins": [
+    "prettier",
+    "@typescript-eslint"
+  ],
   "env": {
     "browser": true,
     "es6": true,
@@ -20,19 +23,45 @@
         "max": 10
       }
     ],
-    "curly": ["warn", "all"],
-    "max-depth": ["warn", 3],
-    "max-lines": ["warn", 120],
-    "max-lines-per-function": ["warn", 100],
-    "max-statements": ["warn", 20],
-    "max-nested-callbacks": ["warn", 3],
-    "max-params": ["warn", 2],
+    "curly": [
+      "warn",
+      "all"
+    ],
+    "max-depth": [
+      "warn",
+      3
+    ],
+    "max-lines": [
+      "warn",
+      120
+    ],
+    "max-lines-per-function": [
+      "warn",
+      100
+    ],
+    "max-statements": [
+      "warn",
+      20
+    ],
+    "max-nested-callbacks": [
+      "warn",
+      3
+    ],
+    "max-params": [
+      "warn",
+      2
+    ],
     "no-magic-numbers": [
       "off",
       {
         "detectObjects": false,
         "enforceConst": true,
-        "ignore": [-1, 0, 1, 2],
+        "ignore": [
+          -1,
+          0,
+          1,
+          2
+        ],
         "ignoreArrayIndexes": true
       }
     ],
@@ -46,7 +75,7 @@
     "no-nested-ternary": "warn",
     "no-unused-vars": "off",
     "prettier/prettier": [
-      "error",
+      "warn",
       {
         "endOfLine": "auto"
       }
